# skill-jangler

./: .gitignore  BULLETPROOF_QUICKSTART.md  CLAUDE.md  QUICKSTART.md  README.md  UV_MIGRATION.md  UV_MIGRATION_COMPLETE.md  enhance.md  pyproject.toml  setup_mcp.sh
cli/: __init__.py
configs/: agno.json  letta.json  mise-task-managing.json  tauri.json
docs/: B1_COMPLETE_SUMMARY.md  CLAUDE.md  ENHANCEMENT.md  LARGE_DOCUMENTATION.md  LLMS_TXT_SUPPORT.md  MCP_SETUP.md  PDF_ADVANCED_FEATURES.md  PDF_EXTRACTOR_POC.md  PDF_IMAGE_EXTRACTION.md  PDF_MCP_TOOL.md  PDF_SCRAPER.md  PDF_SYNTAX_DETECTION.md  UPLOAD_GUIDE.md  USAGE.md
mcp/: __init__.py
