[project]
name = "skill-jangler"
version = "0.1.0"
description = "Scrape and index API docs as claude skills with gusto"
readme = "README.md"
authors = [
    { name = "Jarad DeLorenzo", email = "jaradd@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "mcp>=1.0.0",
    "requests>=2.31.0",
]

[project.scripts]
skill-jangler = "skill_jangler:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
